backend/src/main/java/com/example/sap_shop/error/UserNotFoundException.java
package com.example.sap_shop.error;

public class UserNotFoundException extends Exception{
    public UserNotFoundException(String message) {
        super(message);
    }
}
